add main routes for frontend sran
